--- a/LeetCode/411-420/419. 甲板上的战舰（中等）.md
+++ b/LeetCode/411-420/419. 甲板上的战舰（中等）.md
@@ -8,12 +8,14 @@ Tag : 「脑筋急转弯」
 
 给你一个大小为 $m x n$ 的矩阵 $board$ 表示甲板，其中，每个单元格可以是一艘战舰 `'X'` 或者是一个空位 `'.'` ，返回在甲板 $board$ 上放置的 战舰 的数量。
 
-战舰 只能水平或者垂直放置在 $board$ 上。换句话说，战舰只能按 $1 x k$（$1$ 行，$k$ 列）或 $k x 1$（$k$ 行，$1$ 列）的形状建造，其中 $k$ 可以是任意大小。
+战舰 只能水平或者垂直放置在 $board$ 上。换句话说，战舰只能按 $1 * k$（$1$ 行，$k$ 列）或 $k * 1$（$k$ 行，$1$ 列）的形状建造，其中 $k$ 可以是任意大小。
 
 两艘战舰之间至少有一个水平或垂直的空位分隔 （即没有相邻的战舰）。
 
 示例 1：
+
 ![](https://assets.leetcode.com/uploads/2021/04/10/battelship-grid.jpg)
+
 ```
 输入：board = [["X",".",".","X"],[".",".",".","X"],[".",".",".","X"]]
 
@@ -30,10 +32,9 @@ Tag : 「脑筋急转弯」
 * $m == board.length$
 * $n == board[i].length$
 * $1 <= m, n <= 200$
-* `board[i][j]` 是 `'.'` 或 `'X'`
+* $board[i][j]$ 是 `'.'` 或 `'X'`
 
-
-进阶：你可以实现一次扫描算法，并只使用 O(1) 额外空间，并且不修改 board 的值来解决这个问题吗？
+进阶：你可以实现一次扫描算法，并只使用 $O(1)$ 额外空间，并且不修改 `board` 的值来解决这个问题吗？
 
 ---
 
@@ -54,9 +55,8 @@ Tag : 「脑筋急转弯」
 
 当且仅当某个 `X` 格子的「上方」&「左方」不为 `X` 时，该格子为战舰首个格子，可以进行计数，同时需要注意当前当为 $0$（没有「上方」）和当前列为 $0$（没有「左方」）时的边界情况。
 
-代码：
+* 一次扫描 + $O(1)$ 代码：
 ```Java
-// 一次扫描 + O(1)
 class Solution {
     public int countBattleships(char[][] board) {
         int m = board.length, n = board[0].length;
@@ -73,9 +73,8 @@ class Solution {
 }
 ```
 
-
+* 两次扫描 + $O(1)$ 代码：
 ```Java
-// 两次扫描 + O(1)
 class Solution {
     public int countBattleships(char[][] board) {
         int m = board.length, n = board[0].length;
@@ -99,9 +98,8 @@ class Solution {
 }
 ```
 
-
+* 一次扫描 + $O(m * n)$ 代码：
 ```Java
-// 一次扫描 + O(m * n)
 class Solution {
     public int countBattleships(char[][] board) {
         int m = board.length, n = board[0].length;
@@ -120,8 +118,6 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(m * n)$
-* 空间复杂度：$O(1)$
 
 ---
 
