--- a/LeetCode/431-440/440. 字典序的第K小数字（困难）.md
+++ b/LeetCode/431-440/440. 字典序的第K小数字（困难）.md
@@ -55,7 +55,7 @@ Tag : 「数学」、「模拟」、「找规律」、「计数」
 * ...
 * 位数为 $m$ 的数，此时根据「$limit$ 长度与 $x$ 等同的前缀 $u$」和「$x$」的大小关系，进一步分情况讨论（举个 🌰，当 $limit = 12456$，$x$ 为 $123$ 时，$u = 124$，两者位数相差 $k = 2$ 位）：
     * $u < x$：此时所有位数为 $m$ 的数均大于 $limit$，合法个数为 $0$；
-    * $u == x$：此时所有位数为 $m$ 的数中部分满足 $limit$ 限制，合法个数为 $limit - x * 10^k + 1$ 个；
+    * $u == x$：此时所有位数为 $m$ 的数中部分满足 $limit$ 限制，合法个数为 $limit - x * 10^k + 1$ 个（只有 $[x0...0, limit]$ 为合法数）；
     * $u > x$：此时所有位数为 $m$ 的数均小于 $limit$，合法个数为 $10^k$。
 
 代码：
