--- a/LeetCode/661-670/661. 图片平滑器（简单）.md
+++ b/LeetCode/661-670/661. 图片平滑器（简单）.md
@@ -105,7 +105,7 @@ class Solution:
 
 在朴素解法中，对于每个 $ans[i][j]$ 我们都不可避免的遍历 $8$ 联通方向，而利用「前缀和」我们可以对该操作进行优化。
 
-对于某个 $ans[i][j]$ 而言，我们可以直接计算出其所在 `item` 的左上角 $(a, b) = (i - 1, j - 1)$ 以及其右下角 $(c, d) = (i + 1, j + 1)$，同时为了防止超出原矩阵，我们需要将 $(a, b)$ 与 $(c, d)$ 对边界分别取 `min` 和 `max`。
+对于某个 $ans[i][j]$ 而言，我们可以直接计算出其所在 `item` 的左上角 $(a, b) = (i - 1, j - 1)$ 以及其右下角 $(c, d) = (i + 1, j + 1)$，同时为了防止超出原矩阵，我们需要将 $(a, b)$ 与 $(c, d)$ 对边界分别取 `max` 和 `min`。
 
 当有了合法的 $(a, b)$ 和 $(c, d)$ 后，我们可以直接计算出 `item` 的单元格数量（所包含的行列乘积）及 `item`  的单元格之和（前缀和查询），从而算得 $ans[i][j]$。
 
