--- a/LeetCode/661-670/661. 图片平滑器（简单）.md
+++ b/LeetCode/661-670/661. 图片平滑器（简单）.md
@@ -79,20 +79,18 @@ class Solution {
 ```
 ---
 ```Python
+dirs = list(product(*[[-1,0,1]] * 2))
 class Solution:
     def imageSmoother(self, img: List[List[int]]) -> List[List[int]]:
         m, n = len(img), len(img[0])
-        dirs = [[i, j] for i in range(-1, 2) for j in range(-1, 2)]
         ans = [[0] * n for _ in range(m)]
         for i in range(m):
             for j in range(n):
                 tot, cnt = 0, 0
                 for di in dirs:
-                    nx, ny = i + di[0], j + di[1]
-                    if nx < 0 or nx >= m or ny < 0 or ny >= n:
-                        continue
-                    tot += img[nx][ny]
-                    cnt += 1
+                    if 0 <= (nx := i + di[0]) < m and 0 <= (ny := j + di[1]) < n:
+                        tot += img[nx][ny]
+                        cnt += 1
                 ans[i][j] = tot // cnt
         return ans
 ```
