--- a/LeetCode/681-690/682. 棒球比赛（简单）.md
+++ b/LeetCode/681-690/682. 棒球比赛（简单）.md
@@ -87,22 +87,22 @@ class Solution {
 ```
 
 
-```Python3
-nums = [0 for _ in range(1010)]
+```python
+nums = [0] * 1010
 class Solution:
     def calPoints(self, ops: List[str]) -> int:
         idx = 0
-        for i in range(len(ops)):
-            if ops[i] == '+':
+        for x in ops:
+            if x == '+':
                 nums[idx] = nums[idx - 1] + nums[idx - 2]
-            elif ops[i] == 'D':
+            elif x == 'D':
                 nums[idx] = nums[idx - 1] * 2
-            elif ops[i] == 'C':
+            elif x == 'C':
                 idx -= 2
             else:
-                nums[idx] = int(ops[i])
+                nums[idx] = int(x)
             idx += 1
-        return sum(nums[i] for i in range(idx))
+        return sum(nums[:idx])
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
