--- a/LeetCode/311-320/318. 最大单词长度乘积（中等）.md
+++ b/LeetCode/311-320/318. 最大单词长度乘积（中等）.md
@@ -6,7 +6,7 @@ Tag : 「模拟」、「位运算」、「哈希表」
 
 
 
-给定一个字符串数组 `words`，找到 `length(word[i]) * length(word[j])` 的最大值，并且这两个单词不含有公共字母。你可以认为每个单词只包含小写字母。如果不存在这样的两个单词，返回 $0$。
+给定一个字符串数组 `words`，找到 $length(word[i]) * length(word[j])$ 的最大值，并且这两个单词不含有公共字母。你可以认为每个单词只包含小写字母。如果不存在这样的两个单词，返回 $0$。
 
  示例 1:
 ```
@@ -34,9 +34,9 @@ Tag : 「模拟」、「位运算」、「哈希表」
 ```
 
 提示：
-* 2 <= words.length <= 1000
-* 1 <= words[i].length <= 1000
-* words[i] 仅包含小写字母
+* $2 <= words.length <= 1000$
+* $1 <= words[i].length <= 1000$
+* $words[i]$ 仅包含小写字母
 
 ---
 
@@ -115,7 +115,7 @@ class Solution {
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
-为了方便各位同学能够电脑上进行调试和提交代码，我建立了相关的仓库：https://github.com/SharingSource/LogicStack-LeetCode。
+为了方便各位同学能够电脑上进行调试和提交代码，我建立了相关的仓库：https://github.com/SharingSource/LogicStack-LeetCode 。
 
 在仓库地址里，你可以看到系列文章的题解链接、系列文章的相应代码、LeetCode 原题链接和其他优选题解。
 
