--- a/LeetCode/691-700/693. 交替位二进制数（简单）.md
+++ b/LeetCode/691-700/693. 交替位二进制数（简单）.md
@@ -65,7 +65,7 @@ class Solution {
 
 另外一种更为巧妙的方式是利用交替位二进制数性质。
 
-当给定值 $n$ 为交替位二进制数时，将 $n$ 右移一位得到的值 $m$ 仍为交替位二进制数，且与原数 $n$ 错开一位，两者异或能够得到形如 $0000...1111$ 的结果 $x$，此时对 $x$ 执行加法（进位操作）能够得到形如 $0000...10000$ 的结果，将该结果与 $x$ 执行按位能够得到全 $0$ 结果。 
+当给定值 $n$ 为交替位二进制数时，将 $n$ 右移一位得到的值 $m$ 仍为交替位二进制数，且与原数 $n$ 错开一位，两者异或能够得到形如 $0000...1111$ 的结果 $x$，此时对 $x$ 执行加法（进位操作）能够得到形如 $0000...10000$ 的结果，将该结果与 $x$ 执行按位与后能够得到全 $0$ 结果。 
 
 代码：
 ```Java
