--- a/LeetCode/1001-1010/1004. 最大连续1的个数 III（中等）.md
+++ b/LeetCode/1001-1010/1004. 最大连续1的个数 III（中等）.md
@@ -55,7 +55,6 @@ Tag : 「双指针」、「滑动窗口」、「二分」、「前缀和」
 class Solution {
     public int longestOnes(int[] nums, int k) {
         int n = nums.length;
-        // 
         int[][] f = new int[2][k + 1]; 
         int ans = 0;
         for (int i = 1; i <= n; i++) {
@@ -98,7 +97,7 @@ class Solution {
 **因此，对于某个确定的「左端点/右端点」而言，以「其最远右端点/最远左端点」为分割点的前缀和数轴，具有「二段性」。可以通过二分来找分割点。**
 
 代码：
-```Java []
+```Java
 class Solution {
     public int longestOnes(int[] nums, int k) {
         int n = nums.length;
