--- a/LeetCode/721-730/728. 自除数（简单）.md
+++ b/LeetCode/721-730/728. 自除数（简单）.md
@@ -55,8 +55,9 @@ class Solution {
 }
 ```
 
+-
 
-```Python
+```Python3
 class Solution:
     def selfDividingNumbers(self, left: int, right: int) -> List[int]:
         ans = []
@@ -69,7 +70,7 @@ class Solution:
                 ans.append(i)
         return ans
 ```
-* 时间复杂度：令 $n = right - left + 1$，复杂度为 $O(n \log{right})$
+* 时间复杂度：令 $n = right - left + 1$，复杂度为 $O(n)$
 * 空间复杂度：$O(1)$
 
 ---
@@ -106,14 +107,14 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 $n = right - left + 1$，复杂度为 $O(\log{C} + n)$，其中 $C = 1e4$
-* 空间复杂度：$O(C)$
+* 时间复杂度：令 $m$ 为范围在 $[left, right]$ 之间的自除数的数量，复杂度为$O(\log{m} + m)$，对于本题，$m$ 上界为 $339$
+* 空间复杂度：$O(m)$
 
 ---
 
 ### 打表 + 哈希表 
 
-由于我们打表预处理的做法空间复杂度上界已经是 $O(C)$，所有我们可以干脆将索引也预处理出来，从而避免二分操作。
+在打表预处理了所有范围内的自除数的基础上，我们可以干脆将索引也预处理出来，从而避免二分操作。
 
 其中 $hash[x]$ 的含义为值不超过 $x$ 的最大自除数在 `list` 中的下标。
 
@@ -121,7 +122,7 @@ class Solution {
 ```Java
 class Solution {
     static List<Integer> list = new ArrayList<>();
-    static int[] hash = new int[100010];
+    static int[] hash = new int[10010];
     static {
         for (int i = 1; i <= 10000; i++) {
             int cur = i;
@@ -143,7 +144,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n)$
+* 时间复杂度：令 $m$ 为范围在 $[left, right]$ 之间的自除数的数量，复杂度为$O(m)$，对于本题，$m$ 上界为 $339$
 * 空间复杂度：$O(C)$
 
 ---
