--- a/LeetCode/721-730/728. 自除数（简单）.md
+++ b/LeetCode/721-730/728. 自除数（简单）.md
@@ -57,7 +57,7 @@ class Solution {
 
 -
 
-```Python3
+```Python
 class Solution:
     def selfDividingNumbers(self, left: int, right: int) -> List[int]:
         ans = []
@@ -70,7 +70,7 @@ class Solution:
                 ans.append(i)
         return ans
 ```
-* 时间复杂度：令 $n = right - left + 1$，复杂度为 $O(n)$
+* 时间复杂度：令 $n = right - left + 1$，复杂度为 $O(n * \log{right})$
 * 空间复杂度：$O(1)$
 
 ---
@@ -107,7 +107,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 $m$ 为范围在 $[left, right]$ 之间的自除数的数量，复杂度为$O(\log{m} + m)$，对于本题，$m$ 上界为 $339$
+* 时间复杂度：令 $m$ 为范围在 $[left, right]$ 之间的自除数的数量，$n = right - left + 1$。复杂度为$O(\log{m} + n)$，对于本题，$m$ 上界为 $339$
 * 空间复杂度：$O(m)$
 
 ---
@@ -144,7 +144,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 $m$ 为范围在 $[left, right]$ 之间的自除数的数量，复杂度为$O(m)$，对于本题，$m$ 上界为 $339$
+* 时间复杂度：$n = right - left + 1$。复杂度为$O(n)$
 * 空间复杂度：$O(C)$
 
 ---
