--- a/LeetCode/951-960/954. 二倍数对数组（中等）.md
+++ b/LeetCode/951-960/954. 二倍数对数组（中等）.md
@@ -127,7 +127,7 @@ class Solution {
 * $x$ 为奇数，由于 $\frac{x}{2}$ 不为整数，因此 $x$ 只能作为数对中绝对值较小的那个（即 $x$ 入度为 $0$），加入队列；
 * $x$ 为偶数，首先令 $x$ 的入度 $in[x] = cnts[\frac{x}{2}]$，代表有 $cnts[\frac{x}{2}]$ 个 $\frac{x}{2}$ 与其对应。当 $in[x] = 0$ 时，说明没有 $\frac{x}{2}$ 与其成对，此时 $x$ 只能作为数对中绝对值较小的那个（即 $x$ 入度为 $0$），加入队列。
 
-跑一遍拓扑排序，假设当前出队值为 $t$，此时需要消耗掉 $cnts[t]$ 个 $t * 2$ 与其形成数对（即 $cnts[t * 2] -= cnts[t]$ ），同时 $t * 2$ 的入度也要更新（即可 $in[t * 2] -= cnts[t]$ ），若 $in[t * 2] = 0$ 且此时 $cnts[t * 2] > 0$，将 $t * 2$ 进行入队。同时由于我们明确减少了 $t * 2$ 的数量，因此需要同步更新 $t * 4$ 的入度，同理，当 $t * 4$ 的入度 $in[t * 4] = 0$，同时 $cnts[t * 4] > 0$ 时，需要将 $t * 4$ 进行入队。
+跑一遍拓扑排序，假设当前出队值为 $t$，此时需要消耗掉 $cnts[t]$ 个 $t * 2$ 与其形成数对（即 $cnts[t * 2] -= cnts[t]$ ），同时 $t * 2$ 的入度也要更新（即 $in[t * 2] -= cnts[t]$ ），若 $in[t * 2] = 0$ 且此时 $cnts[t * 2] > 0$，将 $t * 2$ 进行入队。同时由于我们明确减少了 $t * 2$ 的数量，因此需要同步更新 $t * 4$ 的入度，同理，当 $t * 4$ 的入度 $in[t * 4] = 0$，同时 $cnts[t * 4] > 0$ 时，需要将 $t * 4$ 进行入队。
 
 
 代码：
