--- a/LeetCode/951-960/954. 二倍数对数组（中等）.md
+++ b/LeetCode/951-960/954. 二倍数对数组（中等）.md
@@ -142,7 +142,7 @@ class Solution {
         for (int i : arr) {
             if (++cnts[i + M] == 1 && i != 0) list.add(i);
         }
-        if (cnts[0] % 2 != 0) return false;
+        if (cnts[M] % 2 != 0) return false;
         Deque<Integer> d = new ArrayDeque<>();
         for (int i : list) {
             if (i % 2 == 0) {
