--- a/LeetCode/411-420/420. 强密码检验器（困难）.md
+++ b/LeetCode/411-420/420. 强密码检验器（困难）.md
@@ -67,7 +67,7 @@ class Solution {
         for (char c : cs) {
             if (c >= 'a' && c <= 'z') A = 1;
             else if (c >= '0' && c <= '9') B = 1;
-            else C = 1;
+            else if (c >= 'A' && c <= 'Z') C = 1;
         }
         int m = A + B + C;
         if (n < 6) {
