--- a/LeetCode/1801-1810/1801. 积压订单中的订单总数（中等）.md
+++ b/LeetCode/1801-1810/1801. 积压订单中的订单总数（中等）.md
@@ -73,7 +73,7 @@ Tag : 「数据结构」、「模拟」、「优先队列」
 
 两个优先队列（堆）均维护形如 $(price_i, amount_i)$ 的二元组信息，代表价格为 $price_i$ 的订单积压了 $amount_i$ 单。
 
-当处理（尝试匹配）了所有的 $orders[i]$ 之后，统计两个优先队列（堆）中单子数量即是答案。
+当处理（尝试匹配）了所有的 $orders[i]$ 之后，统计两个优先队列（堆）中订单数量即是答案。
 
 代码：
 ```Java
@@ -81,15 +81,15 @@ class Solution {
     public int getNumberOfBacklogOrders(int[][] orders) {
         PriorityQueue<int[]> buy = new PriorityQueue<>((a,b)->b[0]-a[0]), sell = new PriorityQueue<>((a,b)->a[0]-b[0]);
         PriorityQueue<int[]> from = null, to = null;
-        boolean fromIsBuy = false;
+        boolean fromIsSell = false;
         for (int[] order : orders) {
             int p = order[0], a = order[1], t = order[2];
             if (t == 0) {
-                from = sell; to = buy; fromIsBuy = true;
+                from = sell; to = buy; fromIsSell = true;
             } else {
-                from = buy; to = sell; fromIsBuy = false;
+                from = buy; to = sell; fromIsSell = false;
             }
-            while (a > 0 && !from.isEmpty() && (fromIsBuy ? from.peek()[0] <= p : from.peek()[0] >= p)) {
+            while (a > 0 && !from.isEmpty() && (fromIsSell ? from.peek()[0] <= p : from.peek()[0] >= p)) {
                 int[] cur = from.poll();
                 int cnt = Math.min(cur[1], a);
                 cur[1] -= cnt; a -= cnt;
@@ -107,6 +107,33 @@ class Solution {
         return ans;
     }
 }
+```
+
+-
+
+```Python
+class Solution:
+    def getNumberOfBacklogOrders(self, orders: List[List[int]]) -> int:
+        buy, sell = [], []
+        for p, a, t in orders:
+            if t == 0:
+                from_heap, to_heap, from_is_sell = sell, buy, True
+            else:
+                from_heap, to_heap, from_is_sell = buy, sell, False
+            while a and from_heap and (from_heap[0][0] <= p if from_is_sell else -from_heap[0][0] >= p):
+                cur = heapq.heappop(from_heap)
+                if cur[1] > a:
+                    heapq.heappush(from_heap, (cur[0], cur[1] - a))
+                    a = 0
+                else:
+                    a -= cur[1]
+            if a:
+                heapq.heappush(to_heap, (-p if from_is_sell else p, a))
+        ans, mod = 0, int(1e9)+7
+        for _, a in buy + sell:
+            ans += a
+        return ans % mod
+
 ```
 * 时间复杂度：令$n$ 为数组 `orders` 的长度，复杂度为 $O(n\log{n})$
 * 空间复杂度：$O(n)$
