--- a/LeetCode/301-310/310. 最小高度树（中等）.md
+++ b/LeetCode/301-310/310. 最小高度树（中等）.md
@@ -4,6 +4,8 @@
 
 Tag : 「树形 DP」、「DFS」、「动态规划」
 
+
+
 树是一个无向图，其中任何两个顶点只通过一条路径连接。 换句话说，一个任何没有简单环路的连通图都是一棵树。
 
 给你一棵包含 $n$ 个节点的树，标记为 $0$ 到 $n - 1$ 。给定数字 $n$ 和一个有 $n - 1$ 条无向边的 `edges` 列表（每一个边都是一对标签），其中 $edges[i] = [a_i, b_i]$ 表示树中节点 $a_i$ 和 $b_i$ 之间存在一条无向边。
@@ -53,11 +55,13 @@ Tag : 「树形 DP」、「DFS」、「动态规划」
 
 ![image.png](https://pic.leetcode-cn.com/1649200815-gwBeVF-image.png)
 
-树形 DP 问题通常将问题根据「方向」进行划分，对于当前处理到的节点 `u` 而言，我们根据是否考虑「从 `fa` 到 `u` 的出边」将其分为「向下」和「向上」两个方向。
+**树形 DP 问题通常将问题根据「方向」进行划分**。
+
+对于当前处理到的节点 `u` 而言，我们根据是否考虑「从 `fa` 到 `u` 的出边」将其分为「往上」和「往下」两个方向。
 
 假设我们通过 `DFS` 预处理出 $f$ 数组和 $g$ 数组，其中 $f[u]$ 代表在以 $0$ 号点为根节点的树中，以 `u` 节点为子树根节点时，往下的最大高度；$g[u]$ 代表在以 $0$ 号点为根节点的树中，以 `u` 节点为子节点时，往上的最大高度。那么最终以 `u` 为根节点的最大高度为 $\max(f[u], g[u])$。
 
-其中 $f[u]$ 只需要简单的 `DFS` 即可处理出来，但对于 $g[u]$ 而言，其同样包含「往上」和「往下」两部分，对于往上的部分 $\max(g[u], g[fa] + 1)$，对于往下的部分，我们需要考虑「`fa` 节点往下的最大值 $f[fa]$」是否由 `u` 节点参与而来进行分情况讨论，如果 $f[fa]$ 本身不由 `u` 参与，那么 $g[u]$ 应当是 `fa` 节点往下的最大值 $+1$ 而来；如果本身 `fa` 往下的最大值由 `u` 节点参与，此时应当使用 `fa` 往下的次大值 $+1$ 来更新 $g[u]$。
+其中 $f[u]$ 只需要简单的 `DFS` 即可处理出来，但对于 $g[u]$ 而言，其同样包含「往上」和「往下」两部分，对于往上的部分 $\max(g[u], g[fa] + 1)$；而对于往下的部分，我们需要考虑「`fa` 节点往下的最大值 $f[fa]$」是否由 `u` 节点参与而来进行分情况讨论，如果 $f[fa]$ 本身不由 `u` 参与，那么 $g[u]$ 应当是 `fa` 节点往下的最大值 $+1$ 而来（$+1$ 代表加上 `fa` 到 `u` 的边）；如果本身 `fa` 往下的最大值由 `u` 节点参与，此时应当使用 `fa` 往下的次大值 $+1$ 来更新 $g[u]$。
 
 因此我们需要对 $f$ 数组进行拆分，拆分为记录「最大值的 $f1$ 数组」和记录「次大值的 $f2$ 数组」，同时使用 $p$ 数组记录下取得 $f1[u]$ 时 `u` 的子节点 `j` 为何值。 
 
